# point-generator

./: CMakeLists.txt  README.md
headers/: glad.h
src/: glad.c  imgui_impl_glfw.cpp  main.cpp
